--- a/src/components/UI/MyCloseButton/MyCloseButton.module.css
+++ b/src/components/UI/MyCloseButton/MyCloseButton.module.css
@@ -1,12 +1,12 @@
 .closeModal {
 	position: absolute;
-	right: 541px;
+	right: 45%;
 	width: 24px;
 	height: 24px;
 	opacity: 0.2;
 	cursor: pointer;
-  transition: opacity ease 0.5s;
-
+  	transition: opacity ease 0.5s;
+	border: none;
 }
 
 .closeModal:hover{
