--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 *{
-  background-color: rgb(223, 181, 181);
-
+  background-color: rgb(243, 230, 230);
 }
 
 #root{
@@ -11,16 +10,22 @@
   margin-top: 120px;
 }
 
+.goal__list{
+  gap: 5px;
+}
 
 .goal{
   display: flex;
   padding: 10px;
-  box-shadow: 0px 0px 4px 0px rgb(0 0 0 / 20%)
+  box-shadow: 0px 0px 4px 0px rgb(0 0 0 / 20%);
+  margin-bottom: 5px;
+
 }
 
 .todo__title{
   text-align: center;
-  color: #fff;
+  color: rgb(231, 150, 150);
+  text-transform: uppercase;
 }
 
 .goal__content{
@@ -31,11 +36,54 @@
   color: rgb(54, 52, 207);
 }
 
+
+.goal-enter {
+  opacity: 0;
+  transform:translate(-300px);
+
+}
+.goal-enter-active {
+  transform:translate(0);
+
+  opacity: 1;
+  transition: all 500ms ease-in;
+}
+
 .goal-exit {
   opacity: 1;
 }
 .goal-exit-active {
-  transform:translateY(-150px);
+  transform:translateX(300px);
   transition: all 1000ms ease-in;
 }
 
+.myChB{
+  width: 25px;
+  height: 25px;
+}
+
+.goal__buttons{
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.goal_button{
+  width: 49.7%;
+  height: 50px;
+  cursor: pointer;
+  background-color: rgb(188, 170, 204);
+  color: white;
+  border: 1px solid white;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 20px;
+  font-weight: bold;
+
+}
+
+.goal_button:hover,
+.goal_button:active{
+  color: rgb(188, 170, 204);
+  background-color: #fff;
+  border: 1px solid rgb(188, 170, 204);
+}
